# embed-text-recommender

./: .gitignore  LICENSE  Makefile  PIPELINE.md  README.md  dvc.yaml  params.yaml  params.yaml.develop  params.yaml.prod  params.yaml.word2vec  pyproject.toml  scenario.yaml  scenario.yaml.develop  scenario.yaml.prod  setup.py  ui.yaml  ui.yaml.default  ui.yaml.develop  ui.yaml.prod
.dvc/: config
docs/: Makefile  conf.py  index.rst  make.bat
src/data/: make_dataset.py
src/features/: build_features.py  build_sentences.py  build_token_list.py  build_vector_db.py  embed_sentences.py
src/models/: __init__.py  embedder.py  query_handler.py  query_simulator.py  recommend.py  train_w2v_model.py  vector_builder.py  vector_engine.py
src/models/embedding/: __init__.py  dummy_embedding.py  embedding_model.py  sentence_transfomer_embedding.py  word2vec_embedding.py
src/models/search_engine/: __init__.py  dummy_search_engine.py  faiss_search_engine.py  search_engine.py
src/utils/: __init__.py  configuration_manager.py  logging.py
src/visualization/: query_result.py  visualize.py
test/: test_configuration_manager.py  test_embedder.py  test_embedding_model.py  test_search_engine.py  test_search_engine_cosine_distance.py  test_visualize.py
