[tool.poetry]
name = "sbert-news-recommender"
version = "0.1.0"
description = ""
authors = ["u-masao <4973920+u-masao@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sentence-transformers = "^2.2.2"
gradio = "^4.12.0"
datasets = "^2.16.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
flake8 = "^6.1.0"
black = "^23.12.1"
dvc = "^3.36.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
