[tool.poetry]
name = "embed-text-recommender"
version = "0.1.0"
description = ""
authors = ["u-masao <4973920+u-masao@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sentence-transformers = "^2.2.2"
gradio = "4.12.0"
datasets = "^2.16.0"
mlflow = "^2.9.2"
faiss-cpu = "^1.7.4"
cloudpickle = "^3.0.0"
langchain = "^0.0.352"
fugashi = "^1.3.0"
ipadic = "^1.0.0"
gensim = "^4.3.2"
janome = "^0.5.0"
streamlit = "^1.29.0"
japanize-matplotlib = "^1.1.3"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
flake8 = "^6.1.0"
black = "^23.12.1"
dvc = "^3.36.1"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
  "ignore:distutils Version classes are deprecated. Use packaging.version instead.",
  "ignore:Support for class-based .config. is deprecated, use ConfigDict instead.",
]
